# SimpleAIRecorder

./: .gitignore  Cargo.toml
src/: audio.rs  main.rs  openai.rs  screenshot.rs  window_info.rs
